--- a/doc/main.tex
+++ b/doc/main.tex
@@ -20,6 +20,7 @@
 \usepackage{minted}
 \usepackage{graphicx}
 \usepackage{pdflscape}
+\usepackage{caption}
 
 % Document settings
 \setlength{\parindent}{0in}
