--- a/doc/contents.tex
+++ b/doc/contents.tex
@@ -255,6 +255,75 @@
   L5520 pracujący z częstotliwością 2.27GHz oraz 512MB pamięci RAM. Program
   został uruchamiany przez wirtualną maszynę Erlanga w wersji R14B.
 
+  \begin{table}[h!]
+  \begin{center}
+  \caption{Średnie wyniki dla instancji 40-elementowej.
+           {\small S - ilość kroków, C - ilość osobników w instancji}}
+  \begin{tabular}{c|ccc}
+    \hline
+      S \textbackslash C & 50 & 100 & 200 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 1, optimum = 913} \\
+    \hline
+      1000  & 1420 & 1269 & 1230 \\ % 0,55 0,39 0,35
+      5000  & 1183 & 1195 & 1191 \\ % 0,30 0,31 0,30
+      10000 & 1238 & 1150 & 1261 \\ % 0,36 0,26 0,38
+    \hline
+      \multicolumn{4}{c}{Instancja 2, optimum = 16225} \\
+    \hline
+      1000  & 17533 & 17510 & 17206 \\ % 0,08 0,08 0,06
+      5000  & 17224 & 17308 & 17134 \\ % 0,06 0,07 0,06
+      10000 & 17403 & 17261 & 17036    % 0,07 0,06 0,05
+  \end{tabular}
+  \end{center}
+  \end{table}
+
+  \begin{table}[h!]
+  \begin{center}
+  \caption{Średnie wyniki dla instancji 50-elementowej.
+           {\small S - ilość kroków, C - ilość osobników w instancji}}
+  \begin{tabular}{c|ccc}
+    \hline
+      S \textbackslash C & 50 & 100 & 200 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 1, optimum = 1996} \\
+    \hline
+      1000  & 2581 & 2313 & 2294 \\ % 0,29 0,16 0,15
+      5000  & 2345 & 2332 & 2118 \\ % 0,18 0,17 0,06
+      10000 & 2255 & 2180 & 2187 \\ % 0,13 0,09 0,10
+    \hline
+      \multicolumn{4}{c}{Instancja 2, optimum = 26276} \\
+    \hline
+      1000  & 29794 & 28893 & 28105 \\ % 0,13 0,10 0,07
+      5000  & 28910 & 28106 & 27971 \\ % 0,10 0,07 0,06
+      10000 & 28654 & 28921 & 26550    % 0,09 0,10 0,06
+  \end{tabular}
+  \end{center}
+  \end{table}
+
+  \begin{table}[h!]
+  \begin{center}
+  \caption{Średnie wyniki dla instancji 100-elementowej.
+           {\small S - ilość kroków, C - ilość osobników w instancji}}
+  \begin{tabular}{c|ccc}
+    \hline
+      S \textbackslash C & 50 & 100 & 200 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 1, optimum = 5988} \\
+    \hline
+      1000  & 11777 & 10422 & 8204 \\ % 0,97 0,74 0,37
+      5000  & 8801  & 7690  & 7743 \\ % 0,47 0,28 0,29
+      10000 & 8707  & 7831  & 7693 \\ % 0,45 0,31 0,28
+    \hline
+      \multicolumn{4}{c}{Instancja 2, optimum = 58258} \\
+    \hline
+      1000  & 84880 & 75768 & 70093 \\ % 0,46 0,30 0,20
+      5000  & 73886 & 69868 & 68674 \\ % 0,27 0,20 0,18
+      10000 & 73324 & 70162 & 69181    % 0,26 0,20 0,19
+  \end{tabular}
+  \end{center}
+  \end{table}
+
 % section testy (end)
 
 \section{Wnioski} % (fold)
