--- a/doc/contents.tex
+++ b/doc/contents.tex
@@ -244,91 +244,233 @@
 \section{Testy i wyniki} % (fold)
   \label{sec:testy}
 
+  Testy zostały przeprowadzone na serwerze wyposażonym w procesor Intel Xeon
+  L5520 pracujący z częstotliwością 2.27GHz oraz 512MB pamięci RAM. Program
+  został uruchamiany przez wirtualną maszynę Erlanga w wersji R14B.
+  \vspace{1em}
+
   W programie istnieje możliwość regulowania takich parametrów, jak rozmiar
   populacji, ilość kroków oraz prawdopodobieństwo mutacji. Testy zostały
   przeprowadzone dla populacji o wielkościach 50, 100 oraz 200 osobników oraz
   dla 1000, 5000 oraz 10000 kroków. Jako ostatni parametr została przekazana
   liczba 4, co oznacza, że prawdopodobieństwo mutacji wynosiło $\frac{1}{16}$.
+  W tabelach użyte zostały następujące oznaczenia: S - ilość kroków, C - ilość
+  osobników w instancji.
   \vspace{1em}
-
-  Testy zostały przeprowadzone na serwerze wyposażonym w procesor Intel Xeon
-  L5520 pracujący z częstotliwością 2.27GHz oraz 512MB pamięci RAM. Program
-  został uruchamiany przez wirtualną maszynę Erlanga w wersji R14B.
 
   \begin{table}[h!]
   \begin{center}
-  \caption{Średnie wyniki dla instancji 40-elementowej.
-           {\small S - ilość kroków, C - ilość osobników w instancji}}
+  \caption{Średnie wyniki dla instancji 40-elementowej.}
   \begin{tabular}{c|ccc}
     \hline
       S \textbackslash C & 50 & 100 & 200 \\
     \hline
       \multicolumn{4}{c}{Instancja 1, optimum = 913} \\
     \hline
-      1000  & 1420 & 1269 & 1230 \\ % 0,55 0,39 0,35
-      5000  & 1183 & 1195 & 1191 \\ % 0,30 0,31 0,30
-      10000 & 1238 & 1150 & 1261 \\ % 0,36 0,26 0,38
+      1000  & 1420 & 1269 & 1230 \\
+      5000  & 1183 & 1195 & 1191 \\
+      10000 & 1238 & 1150 & 1261 \\
     \hline
       \multicolumn{4}{c}{Instancja 2, optimum = 16225} \\
     \hline
-      1000  & 17533 & 17510 & 17206 \\ % 0,08 0,08 0,06
-      5000  & 17224 & 17308 & 17134 \\ % 0,06 0,07 0,06
-      10000 & 17403 & 17261 & 17036    % 0,07 0,06 0,05
+      1000  & 17533 & 17510 & 17206 \\
+      5000  & 17224 & 17308 & 17134 \\
+      10000 & 17403 & 17261 & 17036
   \end{tabular}
   \end{center}
   \end{table}
 
   \begin{table}[h!]
   \begin{center}
-  \caption{Średnie wyniki dla instancji 50-elementowej.
-           {\small S - ilość kroków, C - ilość osobników w instancji}}
+  \caption{Średnie wyniki dla instancji 50-elementowej.}
   \begin{tabular}{c|ccc}
     \hline
       S \textbackslash C & 50 & 100 & 200 \\
     \hline
       \multicolumn{4}{c}{Instancja 1, optimum = 1996} \\
     \hline
-      1000  & 2581 & 2313 & 2294 \\ % 0,29 0,16 0,15
-      5000  & 2345 & 2332 & 2118 \\ % 0,18 0,17 0,06
-      10000 & 2255 & 2180 & 2187 \\ % 0,13 0,09 0,10
+      1000  & 2581 & 2313 & 2294 \\
+      5000  & 2345 & 2332 & 2118 \\
+      10000 & 2255 & 2180 & 2187 \\
     \hline
       \multicolumn{4}{c}{Instancja 2, optimum = 26276} \\
     \hline
-      1000  & 29794 & 28893 & 28105 \\ % 0,13 0,10 0,07
-      5000  & 28910 & 28106 & 27971 \\ % 0,10 0,07 0,06
-      10000 & 28654 & 28921 & 26550    % 0,09 0,10 0,06
+      1000  & 29794 & 28893 & 28105 \\
+      5000  & 28910 & 28106 & 27971 \\
+      10000 & 28654 & 28921 & 26550
   \end{tabular}
   \end{center}
   \end{table}
 
   \begin{table}[h!]
   \begin{center}
-  \caption{Średnie wyniki dla instancji 100-elementowej.
-           {\small S - ilość kroków, C - ilość osobników w instancji}}
+  \caption{Średnie wyniki dla instancji 100-elementowej.}
   \begin{tabular}{c|ccc}
     \hline
       S \textbackslash C & 50 & 100 & 200 \\
     \hline
       \multicolumn{4}{c}{Instancja 1, optimum = 5988} \\
     \hline
-      1000  & 11777 & 10422 & 8204 \\ % 0,97 0,74 0,37
-      5000  & 8801  & 7690  & 7743 \\ % 0,47 0,28 0,29
-      10000 & 8707  & 7831  & 7693 \\ % 0,45 0,31 0,28
+      1000  & 11777 & 10422 & 8204 \\
+      5000  & 8801  & 7690  & 7743 \\
+      10000 & 8707  & 7831  & 7693 \\
     \hline
       \multicolumn{4}{c}{Instancja 2, optimum = 58258} \\
     \hline
-      1000  & 84880 & 75768 & 70093 \\ % 0,46 0,30 0,20
-      5000  & 73886 & 69868 & 68674 \\ % 0,27 0,20 0,18
-      10000 & 73324 & 70162 & 69181    % 0,26 0,20 0,19
+      1000  & 84880 & 75768 & 70093 \\
+      5000  & 73886 & 69868 & 68674 \\
+      10000 & 73324 & 70162 & 69181
   \end{tabular}
   \end{center}
   \end{table}
 
-% section testy (end)
+  \begin{table}[h!]
+  \begin{center}
+  \caption{Średni błąd dla instancji 40-elementowej.}
+  \begin{tabular}{c|ccc}
+    \hline
+      S \textbackslash C & 50 & 100 & 200 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 1, optimum = 913} \\
+    \hline
+      1000  & 0,55 & 0,39 & 0,35 \\
+      5000  & 0,30 & 0,31 & 0,30 \\
+      10000 & 0,36 & 0,26 & 0,38 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 2, optimum = 16225} \\
+    \hline
+      1000  & 0,08 & 0,08 & 0,06 \\
+      5000  & 0,06 & 0,07 & 0,06 \\
+      10000 & 0,07 & 0,06 & 0,05
+  \end{tabular}
+  \end{center}
+  \end{table}
 
+  \begin{table}[h!]
+  \begin{center}
+  \caption{Średni błąd dla instancji 50-elementowej.}
+  \begin{tabular}{c|ccc}
+    \hline
+      S \textbackslash C & 50 & 100 & 200 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 1, optimum = 1996} \\
+    \hline
+      1000  & 0,29 & 0,16 & 0,15 \\
+      5000  & 0,18 & 0,17 & 0,06 \\
+      10000 & 0,13 & 0,09 & 0,10 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 2, optimum = 26276} \\
+    \hline
+      1000  & 0,13 & 0,10 & 0,07 \\
+      5000  & 0,10 & 0,07 & 0,06 \\
+      10000 & 0,09 & 0,10 & 0,06
+  \end{tabular}
+  \end{center}
+  \end{table}
+
+  \begin{table}[h!]
+  \begin{center}
+  \caption{Średni błąd dla instancji 100-elementowej.}
+  \begin{tabular}{c|ccc}
+    \hline
+      S \textbackslash C & 50 & 100 & 200 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 1, optimum = 5988} \\
+    \hline
+      1000  & 0,97 & 0,74 & 0,37 \\
+      5000  & 0,47 & 0,28 & 0,29 \\
+      10000 & 0,45 & 0,31 & 0,28 \\
+    \hline
+      \multicolumn{4}{c}{Instancja 2, optimum = 58258} \\
+    \hline
+      1000  & 0,46 & 0,30 & 0,20 \\
+      5000  & 0,27 & 0,20 & 0,18 \\
+      10000 & 0,26 & 0,20 & 0,19
+  \end{tabular}
+  \end{center}
+  \end{table}
+
+  \begin{figure}[h!]
+  \begin{center}
+  \caption{Zależność dokładności wyniku od ilości kroków dla instancji z 40 zadaniami.}
+  \includegraphics[scale=.6]{images/40.png}
+  \end{center}
+  \end{figure}
+
+  \begin{figure}[h!]
+  \begin{center}
+  \caption{Zależność dokładności wyniku od ilości kroków dla instancji z 50 zadaniami.}
+  \includegraphics[scale=.6]{images/50.png}
+  \end{center}
+  \end{figure}
+
+  \begin{figure}[h!]
+  \begin{center}
+  \caption{Zależność dokładności wyniku od ilości kroków dla instancji ze 100 zadaniami.}
+  \includegraphics[scale=.6]{images/100.png}
+  \end{center}
+  \end{figure}
+
+  \newpage
+  W celu porównania algorytmów wyżarzania, tabu-search oraz algorytmu
+  genetycznego obliczone zostały średnie wyniki dla danej instancji. Wyniki te
+  oraz porównanie najgorszych i najlepszych rezultatów tych trzech algorytmów są
+  przedstawione są na wykresach \ref{fig:cmp}, \ref{fig:min} oraz \ref{fig:max}.
+  Wszystkie wykresy przedstawiają średni błąd w zależności od rozmiaru instancji.
+
+  \begin{figure}[h!]
+  \begin{center}
+  \caption{Porównanie średnich wyników algorytmów.}
+  \includegraphics[scale=.6]{images/cmp.png}
+  \label{fig:cmp}
+  \end{center}
+  \end{figure}
+
+  \begin{figure}[h!]
+  \begin{center}
+  \caption{Porównanie najlepszych wyników algorytmów.}
+  \includegraphics[scale=.6]{images/min.png}
+  \label{fig:min}
+  \end{center}
+  \end{figure}
+
+  \begin{figure}[h!]
+  \begin{center}
+  \caption{Porównanie najgorszych wyników algorytmów.}
+  \includegraphics[scale=.6]{images/max.png}
+  \label{fig:max}
+  \end{center}
+  \end{figure}
+
+% section testy (end)
+\newpage
 \section{Wnioski} % (fold)
   \label{sec:wnioski}
 
+  Dla większych instancji i tych samych parametrach algorytm genetyczny
+  przegląda mniejszą część przestrzeni rozwiązań, co powoduje uzyskiwanie
+  gorszych wyników. W takich wypadkach należałoby zwiększyć ilość kroków
+  algorytmu, bądź też wielkość populacji, która również ma duże znaczenie dla
+  wyników.
+  \vspace{1em}
+
+  Zwiększenie liczby osobników w populacji oraz ilości kroków powoduje, że
+  algorytm jest w stanie odszukać lepsze rozwiązania, lecz dzieje się to kosztem
+  czasu wykonywania algorytmu. Zmniejszenie tych parametrów przyspiesza
+  działanie algorytmu, lecz owocuje kiepskimi wynikami. Sam program działał
+  dosyć wolno, gdyż wymagał dużo kopiowania pamięci (sortowanie listy powoduje
+  utworzenie nowej listy, a sam czas dostępu do $n$-tego elementu listy zajmuje
+  $O(n)$). Dodatkowo warto zauważyć, że tak jak w przypadku tabu-search,
+  wielkość instancji mam wpływ na czas działania algorytmu.
+  \vspace{1em}
+
+  W przeciwieństwie do algorytmu tabu, algorytm genetyczny zupełnie nie jest
+  deterministyczny. Wynik w sporej części zależy od tego, jak dobra zostanie
+  wylosowana populacja początkowa. W razie wylosowania kiepskiej populacji
+  początkowej nie uda uzyskać się dobrego rozwiązania. Porównując wszystkie trzy
+  algorytmy najlepsze wyniki dawał algorytm tabu-search, a najmniejszą złożoność
+  obliczeniową ma algorytm wyżarzania, gdyż czas jego działania nie zależy od
+  wielkości instancji.
 
 % section wnioski (end)
 
@@ -336,7 +478,9 @@
 \section{Bibliografia} % (fold)
   \label{sec:biblio}
   \begin{enumerate}
+    \item AI Techniques for Game Programming, Mat Buckland, The Premier Press, 2002
     \item \texttt{ftp://sith.ict.pwr.wroc.pl/Informatyka/PEA/ProjektPEA\_11\_12.pdf}
+    \item \texttt{ftp://sith.ict.pwr.wroc.pl/Informatyka/PEA/genetyki.pdf}
   \end{enumerate}
 
 % section biblio (end)
