--- a/doc/main.tex
+++ b/doc/main.tex
@@ -31,7 +31,7 @@
 
 % fill these in
 \title{Algorytm genetyczny\\\small{(ewolucyjny)}}
-\author{Mateusz Lenik\\Łukasz Łęczycki}
+\author{Łukasz Łęczycki 181141\\Mateusz Lenik 181142}
 \date{\today}
 
 % Include title page template
